--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ประวัติส่วนตัว</title>
+<style>
+
+        body { font-family: Arial, sans-serif; display: flex; justify-content: center; padding: 20px; }
+
+        .container { display: flex; max-width: 800px; background: #fff; box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
+
+        .left, .right { padding: 20px; }
+
+        .left { background: #333; color: #fff; width: 40%; }
+
+        .right { width: 60%; }
+
+        img { width: 100%; border-radius: 8px; }
+
+        .title { font-weight: bold; margin: 10px 0; }
+</style>
 </head>
 <body>
-    <h1>สวัสดีชาวuguigu</h1>
+<div class="container">
+<div class="left">
+<img src="profile.jpg" alt="Profile Picture">
+<div class="title">ประวัติส่วนตัว</div>
+<p>ชื่อ: ณัฐวุฒิ แดงโชติ</p>
+<p>อายุ: 19 ปี</p>
+<p>วันเกิด: 07 มกราคม 2005</p>
+<div class="title">ติดต่อ</div>
+<p>โทร: 061-132-9747</p>
+<p>Email: tilend07@gmail.com</p>
+</div>
+<div class="right">
+<div class="title">การศึกษา</div>
+<p>มัธยม: พระแม่มารีฯ (เกรด 2.56)</p>
+<p>อุดมศึกษา: ม. พะเยา, วิทยาการคอมฯ</p>
+<div class="title">ทักษะ</div>
+<p>เล่นแบดมินตัน</p>
+<div class="title">งานอดิเรก</div>
+<p>วาดรูป, ถ่ายรูป</p>
+</div>
+</div>
 </body>
-</html>
+</html> 
