--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ประวัติส่วนตัว</title>
 <style>
+       /* จัดการขนาดพื้นฐาน */
        body {
            font-family: Arial, sans-serif;
            display: flex;
            justify-content: center;
            align-items: center;
-           min-height: 100vh;
            margin: 0;
            background-color: #f5f5f5;
        }
        .container {
            display: flex;
-           width: 80%;
-           max-width: 1000px;
+           flex-direction: row;
+           width: 210mm;
+           height: 297mm;
+           max-width: 100%;
+           max-height: 100vh;
            background-color: #fff;
            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
            border-radius: 8px;
