--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 <div class="container">
 <div class="left">
-<img src="C:\Users\natth\Downloads\เพื่อน\1.jpg" alt="Profile Picture" class="profile-pic">
+<img src="C:\Users\natth\Downloads\เพื่อน\1.jpg" width="50%">
 <h1>ประวัติส่วนตัว</h1>
 <p><strong>ชื่อ:</strong> ณัฐวุฒิ แดงโชติ</p>
 <p><strong>ชื่อเล่น:</strong> โตเต้</p>
