--- a/index.html
+++ b/index.html
@@ -1,113 +1,127 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ประวัติส่วนตัว</title>
-<style>
-       /* จัดการขนาดพื้นฐาน */
-       body {
-           font-family: Arial, sans-serif;
-           display: flex;
-           justify-content: center;
-           align-items: center;
-           margin: 0;
-           background-color: #f5f5f5;
-       }
-       .container {
-           display: flex;
-           flex-direction: row;
-           width: 210mm;
-           height: 297mm;
-           max-width: 100%;
-           max-height: 100vh;
-           background-color: #fff;
-           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-           border-radius: 8px;
-           overflow: hidden;
-       }
-       .left, .right {
-           padding: 20px;
-       }
-       .left {
-           background-color: #333;
-           color: #fff;
-           width: 40%;
-           display: flex;
-           flex-direction: column;
-           align-items: center;
-       }
-       .right {
-           background-color: #f9f9f9;
-           width: 60%;
-           color: #333;
-       }
-       .profile-pic {
-           width: 80%;
-           border-radius: 8px;
-           margin-bottom: 20px;
-       }
-       h1, h2 {
-           font-size: 1.2em;
-           margin: 10px 0;
-       }
-       p, li {
-           margin: 5px 0;
-       }
-       .section-title {
-           font-weight: bold;
-           margin-top: 20px;
-           margin-bottom: 10px;
-       }
-       .quote {
-           font-style: italic;
-           margin-top: 15px;
-           color: #ccc;
-           text-align: center;
-       }
-       ul {
-           list-style-type: none;
-           padding: 0;
-       }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ประวัติส่วนตัว</title>
+    <style>
+        /* จัดการขนาดพื้นฐาน */
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            background-color: #f5f5f5;
+        }
+        .container {
+            display: flex;
+            flex-direction: row;
+            width: 210mm; /* ขนาด A4 */
+            height: 330mm; /* ปรับความยาวเป็น 330mm */
+            max-width: 100%;
+            max-height: 100vh;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        .left, .right {
+            padding: 20px;
+        }
+        .left {
+            background-color: #CCFFFF;
+            color: #FFCCFF;
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .right {
+            background-color: #FFCCFF;
+            width: 60%;
+            color: #CCFFFF;
+        }
+        .profile-pic {
+            width: 80%;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        h1, h2 {
+            font-size: 1.2em;
+            margin: 10px 0;
+        }
+        p, li {
+            margin: 5px 0;
+        }
+        .section-title {
+            font-weight: bold;
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
+        .quote {
+            font-style: italic;
+            margin-top: 15px;
+            color: #ccc;
+            text-align: center;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        /* เพิ่มการตั้งค่าการตอบสนอง */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                width: 100%;
+                height: auto;
+            }
+            .left, .right {
+                width: 100%;
+                padding: 15px;
+            }
+        }
+    </style>
 </head>
 <body>
 <div class="container">
-<div class="left">
-<img src="C:\Users\natth\Downloads\เพื่อน\1.jpg" width="50%">
-<h1>ประวัติส่วนตัว</h1>
-<p><strong>ชื่อ:</strong> ณัฐวุฒิ แดงโชติ</p>
-<p><strong>ชื่อเล่น:</strong> โตเต้</p>
-<p><strong>อายุ:</strong> 19 ปี</p>
-<p><strong>วันเกิด:</strong> 07 มกราคม 2005</p>
-<p><strong>เชื้อชาติ:</strong> พะเยา</p>
-<p><strong>ศาสนา:</strong> พุทธ</p>
-<h2>ช่องทางการติดต่อ</h2>
-<p>โทรศัพท์: 061-132-9747</p>
-<p>GMAIL: tilend07@gmail.com</p>
-<p>IG: dn_elit</p>
-<p>FB: Natthawut Daengchot</p>
-<div class="quote">"เรียนรู้ให้มาก เพื่ออนาคตในวันข้างหน้า"</div>
-</div>
-<div class="right">
-<h1>การศึกษา</h1>
-<ul>
-<li>ระดับประถมศึกษา: โรงเรียนเกี้ยวาง</li>
-<li>ระดับมัธยมศึกษา: โรงเรียนพระแม่มารีประจวบคีรีขันธ์ (เกรดเฉลี่ย 2.56)</li>
-<li>ระดับมัธยมศึกษา: โรงเรียนห้วยผึ้ง สายศิลป์-คำนวณ</li>
-<li>ระดับอุดมศึกษา: มหาวิทยาลัยพะเยา, คณะเทคโนโลยีสารสนเทศและการสื่อสาร, สาขาวิทยาการคอมพิวเตอร์</li>
-</ul>
-<h2>ทักษะ และความสามารถ</h2>
-<ul>
-<li>เล่นแบดมินตัน</li>
-</ul>
-<h2>งานอดิเรก</h2>
-<ul>
-<li>วาดรูป</li>
-<li>ถ่ายรูป</li>
-<li>ว่างรูป</li>
-</ul>
-</div>
+    <div class="left">
+        <img src="C:\Users\natth\Downloads\เพื่อน\2.jpg" width="30%" >
+        <h1>ประวัติส่วนตัว</h1>
+        <p><strong>ชื่อ:</strong> ณัฐวุฒิ แดงโชติ</p>
+        <p><strong>ชื่อเล่น:</strong> ไตเติ้ล</p>
+        <p><strong>อายุ:</strong> 19 ปี</p>
+        <p><strong>วันเกิด:</strong> 07 มกราคม 2005</p>
+        <p><strong>เชื้อชาติ:</strong> ไทย</p>
+        <p><strong>ศาสนา:</strong> พุทธ</p>
+        <h2>ช่องทางการติดต่อ</h2>
+        <p>โทรศัพท์: 061-132-9747</p>
+        <p>GMAIL: titlend07@gmail.com</p>
+        <p>IG: dn_eltit</p>
+        <p>FB: Natthawut Daengchot</p>
+        <div class="quote">"เรียนรู้ให้มาก เพื่ออนาคตในวันข้างหน้า"</div>
+    </div>
+    <div class="right">
+        <h1>การศึกษา</h1>
+        <ul>
+            <li>ระดับประถมศึกษา: โรงเรียนเกี้ยวกวง</li>
+            <li>ระดับมัธยมศึกษา: โรงเรียนพระแม่มารีประจวบคีรีขันธ์ </li>
+                <li>(เกรดเฉลี่ย 2.56)</li>
+            <li>ระดับมัธยมศึกษา: โรงเรียนหัวหิน สายศิลป์-คำนวณ</li>
+            <li>ระดับอุดมศึกษา: มหาวิทยาลัยพะเยา, คณะเทคโนโลยีสารสนเทศและการสื่อสาร, สาขาวิทยาการคอมพิวเตอร์</li>
+        </ul>
+        <h2>ทักษะและความสามารถ</h2>
+        <ul>
+            <li>เล่นแบดมินตัน</li>
+        </ul>
+        <h2>งานอดิเรก</h2>
+        <ul>
+            <li>วาดรูป</li>
+            <li>ถ่ายรูป</li>
+            <li>อ่านนิยาย</li>
+        </ul>
+    </div>
 </div>
 </body>
 </html>
