--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
             padding: 20px;
         }
         .left {
-            background-color: #CCFFFF;
-            color: #FFCCFF;
+            background-color: #Cddafd;
+            color: #fff1e6;
             width: 40%;
             display: flex;
             flex-direction: column;
             align-items: center;
         }
         .right {
-            background-color: #FFCCFF;
+            background-color: #fff1e6;
             width: 60%;
-            color: #CCFFFF;
+            color: #Cddafd;
         }
         .profile-pic {
             width: 80%;
